<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.CarsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#003C8F">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:text="@string/hello_username" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:text="@string/log_out"
            android:textColor="#FF1818"
            android:textSize="20sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_menu"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="313dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:text="@string/select_filter"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="#EEFFFF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_data_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:text="@string/data_updated"
        android:textColor="#003C8F"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>