<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="307dp"
    android:layout_height="wrap_content"
    android:background="#80BBDEFB">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_no_filter"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/layout_width_294dp"
        android:layout_height="@dimen/layout_height_53dp"
        android:layout_marginTop="9dp"
        android:text="@string/no_filter"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_height_53dp"
        android:src="@drawable/circle_green"
        app:layout_constraintBottom_toBottomOf="@id/button_available"
        app:layout_constraintStart_toStartOf="@id/button_available"
        app:layout_constraintTop_toTopOf="@id/button_available" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_available"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/layout_width_294dp"
        android:layout_height="@dimen/layout_height_53dp"
        android:layout_marginTop="3dp"
        android:text="@string/available"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_no_filter" />

    <ImageView
        android:id="@+id/iv_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_height_53dp"
        android:src="@drawable/circle_blue"
        app:layout_constraintBottom_toBottomOf="@id/button_hidden"
        app:layout_constraintStart_toStartOf="@id/button_hidden"
        app:layout_constraintTop_toTopOf="@id/button_hidden" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_hidden"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/layout_width_294dp"
        android:layout_height="@dimen/layout_height_53dp"
        android:layout_marginTop="3dp"
        android:text="@string/hidden"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_available" />

    <ImageView
        android:id="@+id/iv_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_height_53dp"
        android:src="@drawable/circle_yellow"
        app:layout_constraintBottom_toBottomOf="@id/button_disabled"
        app:layout_constraintStart_toStartOf="@id/button_disabled"
        app:layout_constraintTop_toTopOf="@id/button_disabled" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_disabled"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/layout_width_294dp"
        android:layout_height="@dimen/layout_height_53dp"
        android:layout_marginTop="3dp"
        android:text="@string/disabled"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_hidden" />

</androidx.constraintlayout.widget.ConstraintLayout>